Fixed the small overflow by adding the right and left class directly into the img and not in the row. Also removed right margin when hovering.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@ img{
     margin: 25px;
     &:hover{
         width: 90%;
+        margin-right: 0px;
     }
 }
 
